kubernetes/k3s-01/workloads/airtrail/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airtrail
  namespace: airtrail
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: airtrail
  template:
    metadata:
      labels:
        app: airtrail
    spec:
      containers:
        - name: airtrail
          image: docker.io/johly/airtrail:v3.13.0@sha256:b49918c441cd52ffd2ef795738e58031abbcfd1e8094a4365672282bb6b805b1
